--- a/index.html
+++ b/index.html
@@ -18,25 +18,30 @@
                 <a href="#"> <img src="images/logo.svg" alt="logo"></a>
                 <a href="#Try it Free"><button>Try it Free</button></a>
             </nav>
-                <blockquote><h1>Build The Community<br> Your Fans Will Love</h1> Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. <br><br><a href="#"> <button>Get Started For Free</button></a></blockquote>
+                <section class="quote">
+                    <h1>Build The Community<br> Your Fans Will Love</h1> 
+                    Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+                    Create connections with your users as you engage in genuine discussion. <br><br><a href="#"> 
+                    <button>Get Started For Free</button></a>
+                </section>
                 <section class="mockup">
-                    <img src="images/illustration-mockups.svg" alt="mockups" style="width:90%;">
+                    
                 </section>
         </header>
 
         <main class="main-content">
-            <section class="main-section gap">
+            <section class="main-section gap content">
                 <div class="sc-text">
                     <h2>Grow Together</h2>
                     <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
                         Think of the insightful conversations you miss out on with a feedback form. </p>
                 </div>
-                <div class="sc-img-grow">
+                <div class="sc-img-grow sc-img">
 
                 </div>
             </section>
-            <section class="main-section gap">
-                <div class="sc-img-flow">
+            <section class="main-section gap content">
+                <div class="sc-img-flow sc-img">
 
                 </div>
                 <div class="sc-text">
@@ -45,13 +50,13 @@
                             have just-in-time loading for a more natural flow.</p>
                 </div>
             </section>
-        <section class="main-section">
+        <section class="main-section content">
             <div class="sc-text">
                     <h2>Your Users</h2>
                     <p>It takes no time at all to integrate Huddle with your app's authentication solution. 
                         This means, once signed in to your app, your users can start chatting immediately.</p>
                 </div>
-                <div class="sc-img-users">
+                <div class="sc-img-users sc-img">
 
                 </div>
         </section>            
